samples/_failures_safe/1761291981_9c7999_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6a384054.c: In function ‘main’:
./samples/SAFE/__tmp_6a384054.c:136:9: error: expected declaration or statement at end of input
  136 |         analyze_logs(logs, entry_count);
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_6a384054.c:136:9: error: expected declaration or statement at end of input
